--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -1,5 +1,5 @@
 // Não esquecer mudar no main.ts
-$primary: cornflowerblue; //#1a5cff;
+$primary: #7289da; //#1a5cff;
 $success: #46c93a;
 $danger: #ff4757;
 $warning: #ffba00;
