--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -1,7 +1,7 @@
 // Não esquecer mudar no main.ts
 $primary: #7289da; //#1a5cff;
 $success: #46c93a;
-$danger: #741d25;
+$danger: #d80c0c;
 $warning: #ffba00;
 $dark: #1e2023;
 $darker: #141417;
