--- a/src/scss/helpers.scss
+++ b/src/scss/helpers.scss
@@ -1,11 +1,19 @@
 h1,h2,h3,h4,h5,h6,p,th,td,tr,div {
   color: rgb(var(--text-color));
 }
-.vs-input:active .vs-input__icon,.vs-button__content  {
+.vs-input:active .vs-input__icon,.vs-button__content,.vs-card__interactions h4  {
   color: white !important;
 }
 
 .vs-button--darker {
+  background-color: rgb(var(--vs-darker));
+}
+
+.no-hover {
+  pointer-events: none;
+}
+
+.bg-darker {
   background-color: rgb(var(--vs-darker));
 }
 
