--- a/src/scss/helpers.scss
+++ b/src/scss/helpers.scss
@@ -21,6 +21,18 @@ h1,h2,h3,h4,h5,h6,p,th,td,tr,div {
 .bg-darker {
   background-color: rgb(var(--vs-darker));
 }
+.border-top-darker {
+  border-top: 3px rgb(var(--vs-darker)) solid;
+}
+.border-bottom-darker {
+  border-bottom: 3px rgb(var(--vs-darker)) solid;
+}
+.border-left-darker {
+  border-left: 3px rgb(var(--vs-darker)) solid;
+}
+.border-right-darker {
+  border-right: 3px rgb(var(--vs-darker)) solid;
+}
 
 .vs-tooltip {
   color: rgb(var(--vs-text));
@@ -29,8 +41,11 @@ h1,h2,h3,h4,h5,h6,p,th,td,tr,div {
 .rounded-corners {
   border-radius: 12px;
 }
+
 .vs-switch {
-  // coerencia
+  margin: var(--vs-button-margin);
+  // TODO isto funciona com zoom a 100% mas se mudar o zoom os botões mudam mas este não
+  height: 34px !important;
   border-radius: 12px !important;
 }
 
