--- a/src/scss/helpers.scss
+++ b/src/scss/helpers.scss
@@ -14,6 +14,14 @@ h1,h2,h3,h4,h5,h6,p,th,td,tr,div {
   background-color: rgb(var(--vs-darker));
 }
 
+body:not([vs-theme=dark]) {
+  .vs-button--border .vs-button__content,
+  .vs-button--transparent .vs-button__content {
+    color: rgb(var(--vs-text));
+    filter: invert(100%);
+  }
+}
+
 .no-hover {
   pointer-events: none;
 }
